--- a/css/media.css
+++ b/css/media.css
@@ -1,5 +1,4 @@
 
-
 @media screen and (max-width: 1240px) {
   .top-slide-block {
     margin-bottom: 50px;  
@@ -585,6 +584,10 @@
     align-items: center;
   }
 
+  .about__present-text h3 > br {
+    display: block;
+  }
+  
   .btn__order,
   .footer-btn {
     padding: 8px 10px;
