--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,6 @@ button {
 
 body {
   font-family: "Inter", sans-serif;
-  /* font-family: "Merienda", cursive; */
   font-family: "DM Sans", sans-serif;
   max-width: 1280px;
   width: 100%;
@@ -60,7 +59,6 @@ body {
   line-height: 1.2;
   margin-bottom: 30px;
   color: #6f1978fc;
-  /* text-align: center; */
 }
 
 p {
@@ -281,7 +279,6 @@ main {
 
 h1 {
   color: white;
-  /* text-shadow: 2px 2px 0 #dfbaca; */
 }
 
 .top-slide-block {
@@ -379,11 +376,10 @@ h1 {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: center;
 }
 
 .about__textbox h2 {
-  text-align: center;
+  /* text-align: center; */
 }
 
 .about__text {
@@ -400,7 +396,7 @@ h1 {
 .about__present-history {
   display: flex;
   flex-direction: row;
-  gap: 0 20px;
+  gap: 0 40px;
   margin: 10px 0;
 }
 
@@ -425,6 +421,10 @@ h1 {
   font-weight: 500;
   margin-bottom: 10px;
   color: #6f1978fc;
+}
+
+.about__present-text h3 > br {
+  display: none;
 }
 
 .about__present-iris-box {
@@ -457,7 +457,6 @@ h1 {
 .perfume__descript {
   display: flex;
   flex-direction: column;
-  align-items: center;  
 }
 
 .perfume__inner {
@@ -623,7 +622,6 @@ p {
 
 .accordeon__title {
   display: flex;
-  justify-content: center
 }
 
 .accordeon__item {
@@ -749,7 +747,6 @@ p {
 .products__items {
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
 .products__inner-box {
@@ -1104,7 +1101,6 @@ nav ul li a:hover::after {
 }
 
 /* Enlarge text when hovering */
-
 nav ul li {
   transition: transform 0.3s ease-in-out;
 }
